# interminai

./: .gitignore  Cargo.toml  Makefile  PROTOCOL.md  README.md  demo-adventure-setup.sh  demo-adventure.tape  demo-rebase-setup.sh  idea.md  interminai.py  mcp_server.py
skills/interminai/: SKILL.md  examples.md  reference.md
skills/interminai/scripts/: interminai
src/: alacritty_backend.rs  custom_screen.rs  main.rs  terminal.rs
tests/: activity_test.rs  color_test.rs  common.rs  comprehensive_vim_test.rs  csi_test.rs  cursor_test.rs  daemon_test.rs  debug_test.rs  delayed_wrap_test.rs  dsr_test.rs  error_handling_test.rs  integration_test.rs  number_test.rs  password_test.rs  resize_test.rs  scroll_test.rs  text_input_test.rs  wait_test.rs
